# ArticleNovelySearch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
docs/src/: Config.md  embedding_holder.md
docs/src/embedders/: tf_embedder.md  tf_idf_embedder.md
docs/src/uniqueness_calculators/: uniqueness_calculator.md  uniqueness_metric.md
docs/src/uniqueness_calculators/clustering_uniqueness_calculator/: calculator.md
markdown_docs/: main.md
markdown_docs/src/: Config.md  _custom_argument_parser.md  arxiv_searcher.md  pdf_reader.md
markdown_docs/src/embedders/: embedder.md
markdown_docs/src/similarity_calculators/: cosine_similarity_calculator.md  similarity_calculator.md
markdown_docs/src/uniqueness_calculators/: __init__.md  uniqueness_calculator.md  uniqueness_calculator_name.md
src/: Config.py  _custom_argument_parser.py  arxiv_searcher.py  embedding_holder.py  pdf_reader.py  topics.py  uniqueness_calculator.py
src/embedders/: embedder.py  tf_embedder.py  tf_idf_embedder.py
src/similarity_calculators/: cosine_similarity_calculator.py  similarity_calculator.py
src/uniqueness_calculators/: __init__.py  uniqueness_calculator.py  uniqueness_calculator_name.py  uniqueness_metric.py
src/uniqueness_calculators/clustering_uniqueness_calculator/: calculator.py
src/uniqueness_calculators/distance_uniqueness_calculator/: calculator.py
src/uniqueness_metrics/: longest_sole_in_node_metric.py  sum_of_connections_metric.py  uniqueness_metric.py  uniqueness_metric_name.py
(+21 files in other folders)
